# EntropyNetworking

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODESTYLE.md  DOCUMENTATION.md  README.md  tsan_suppressions.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  prerelease.yml  release.yml
cmake/: EntropyLinting.cmake  EntropyNetworkingConfig.cmake.in
docs/: hashing-test-vectors.md
examples/: CMakeLists.txt  README.md  README_LOCAL.md  batch_demo_client.cpp  batch_demo_server.cpp  canvas_client.cpp  canvas_server.cpp  client.cpp  local_client.cpp  local_server.cpp  protocol_client.cpp  protocol_server.cpp  schema_generation.cpp  server.cpp
src/Networking/Core/: ComponentSchema.cpp  ComponentSchema.h  ComponentSchemaRegistry.cpp  ComponentSchemaRegistry.h  ConnectionTypes.h  ErrorCodes.h  NetworkTypes.h  PropertyHash.cpp  PropertyHash.h  PropertyRegistry.cpp  PropertyRegistry.h  PropertyTypes.cpp  PropertyTypes.h  SchemaGeneration.h  SchemaNackPolicy.h  SchemaNackTracker.cpp  SchemaNackTracker.h  TimeUtils.h
src/Networking/HTTP/: HttpClient.cpp  HttpClient.h  HttpConnection.cpp  HttpConnection.h  HttpTypes.h  Proxy.cpp  Proxy.h
src/Networking/Protocol/: ComponentSchemaSerializer.cpp  ComponentSchemaSerializer.h  MessageSerializer.cpp  MessageSerializer.h  PropertyWire.h  WebDavAdapter.cpp  WebDavAdapter.h  entropy.capnp
src/Networking/Session/: BatchManager.cpp  BatchManager.h  NetworkSession.cpp  NetworkSession.h  SessionHandle.cpp  SessionHandle.h  SessionManager.cpp  SessionManager.h
src/Networking/Transport/: ConnectionHandle.cpp  ConnectionHandle.h  ConnectionManager.cpp  ConnectionManager.h  LocalServer.h  NamedPipeConnection.cpp  NamedPipeConnection.h  NamedPipeServer.cpp  NamedPipeServer.h  NetworkConnection.h  RemoteServer.cpp  RemoteServer.h  UnixSocketConnection.cpp  UnixSocketConnection.h  UnixSocketServer.cpp  UnixSocketServer.h  WebRTCConnection.cpp  WebRTCConnection.h  WebRTCServer.cpp  WebRTCServer.h  XPCConnection.cpp  XPCConnection.h  XPCServer.cpp  XPCServer.h
src/Networking/WebDAV/: WebDAVConnection.cpp  WebDAVConnection.h  WebDAVFileSystemBackend.cpp  WebDAVFileSystemBackend.h  WebDAVPropfindParser.cpp  WebDAVPropfindParser.h  WebDAVReadStream.cpp  WebDAVReadStream.h  WebDAVUtils.cpp  WebDAVUtils.h
tests/: CMakeLists.txt  CallbackFanoutTests.cpp  ComponentSchemaRegistryTests.cpp  ComponentSchemaTests.cpp  ConnectionManagerLifecycleTests.cpp  ConnectionManagerTests.cpp  DavTree.h  FuzzUnixFrame.cpp  HttpClientRobustnessTests.cpp  HttpClientStreamingTests.cpp  HttpClientTests.cpp  HttpClientWebDAVIntegrationTest.cpp  HttpNetworkConnection.h  HttpNetworkConnectionDebug.cpp  LocalIpcTests.cpp  ManagerMetricsTests.cpp  MiniDavServer.h  MockHttpConnection.h  NetworkSessionHandshakeTests.cpp  NetworkSessionNackTests.cpp  PropertyHashTests.cpp  PropertyRegistryTests.cpp  PropertyTypesTests.cpp  SchemaGenerationTests.cpp  SchemaIntegrationTests.cpp  SchemaNackTrackerTests.cpp  WebDAVBackendTests.cpp  WebDAVClientIntegrationTests.cpp  WebDAVConnectionDirectTest.cpp  WebDAVConnectionTests.cpp  WebDAVPropfindParserTests.cpp  WebDAVStreamingTests.cpp  WebDavAdapterTests.cpp  WebDavMiniServerTests.cpp  WebRTCConnectionTests.cpp  WebRTCIntegrationTests.cpp  WebRTCTestHelpers.h
tools/: format_code.sh  lint_code.sh  setup_hooks.sh
triplets/: universal-osx.cmake
